# ifds

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  IDEA.md  README.md  pyproject.toml  sim_variants_test.yaml
.claude/agents/: code-reviewer.md  devops.md  docs-updater.md  lead-dev.md  refactor.md  test-engineer.md
.claude/commands/: build.md  commit.md  continue.md  daily-review.md  decide.md  develop.md  docs.md  doctor.md  handoff.md  learn.md  pause.md  refactor.md  replay.md  review.md  setup-env.md  test.md  where-am-i.md  wrap-up.md
.claude/rules/: git-workflow.md  ifds-rules.md  security.md  testing.md
.claude/scripts/: session-end.sh  session-start.sh
.reports/: codemap-diff.txt
archive/: BC12_SUMMARY.md  BC9_SUMMARY.md  MISSING_FEATURES.md  V13_VS_V2_RESULTS.md  ifds-trading-process.md
archive/conductor-2026-02-26/: config.json
docs/: API_MAP.md  API_STACK.md  CHANGELOG.md  MISSING_FEATURES.md  PARAMETERS.md  PIPELINE_LOGIC.md  SESSION_CLOSE_20260210.md  STATUS.md  V13_VS_V2_COMPARISON.md  V13_VS_V2_RESULTS.md  ifds-log-review-prompt-v4.md  ifds-log-review-prompt-v5.md
docs/CODEMAPS/: architecture.md  backend.md  data.md  dependencies.md
docs/analysis/: cumulative-drift-investigation-2026-06-08.md  dp-pct-retrospective-audit.md  factor-exposure-layer-decision-2026-06-18.md  flow-decomposition.md  loss-exit-whipsaw-analysis.md  mid-vs-ifds-sectors-W18.md  scoring-validation.md  signal-attribution-data-coverage-2026-06-24.md  ticker-liquidity-audit-v2.csv  ticker-liquidity-audit-v2.md  ticker-liquidity-audit.csv  ticker-liquidity-audit.md  uw-feed-descope-2026-06-18.md  uw-quick-wins-verification.md
docs/archive/: README.md
docs/audit/: 2026-05-21-code-health-quick-scan.md
docs/decisions/: 2026-04-28-day63-decision-framework.md  2026-05-14-day63-decision-outcome.md
docs/design/: swing-pivot-architecture.md
docs/foundational/: README.md
docs/guides/: tradingview-setup.md
docs/handoff/: 2026-05-08-chat-handoff-strategic-review.md  2026-05-14-chat-handoff-day63-outcome.md  2026-05-15-log-review-handoff.md  2026-05-16-chat-handoff-phase1-w21-close.md  2026-05-16-fazis1-w21-handoff.md  2026-05-18-log-review-day1-swing-briefing.md  2026-05-25-log-review-emergency-procedure-cc-changelog.md  2026-05-25-w21-close-handoff.md  2026-05-26-day7-evening-handoff.md  2026-06-01-part-a-kickoff-message.md  2026-06-02-telegram-task-kickoff-message.md  2026-06-08-kickoff-message.md  2026-06-12-session-close-handoff.md  2026-06-13-kickoff-message.md  2026-06-18-uw-gex-flip-runbook.md  2026-06-24-cc-close-handoff.md  2026-06-24-cc-kickoff-message.md  2026-06-24-kickoff-message.md  2026-06-24-session-close-handoff.md  operating-environment.md  project-instructions-v2.md
docs/journal/: 2026-02-12-session-bc16-sim-roadmap.md  2026-02-13-session-moneyflows-analysis.md  2026-02-14-cc-prompt.md  2026-02-15-cc-prompt-company-intel-v2.md  2026-02-17-cc-prompt-paper-trading.md  2026-02-18-session-bugfix-sim-l2.md  2026-02-23-session-pnl-reconstruction.md  2026-02-26-session-close-2.md  2026-02-26.md  2026-02-27-session-close-2.md  2026-03-02.md  (+43 more)
scripts/: check_phase13_freshness.py  company_intel.py  crontab.md  deploy_daily.sh  deploy_intraday.sh  find_telegram_chat_id.py  merge_mms_state.py  sector_rotation_chart.py  setup_cron.sh  sync_from_mini.sh  test_telegram.py  validate_etf_holdings.py
tests/: conftest.py  live_api_test_manual.py  test_adapters.py  test_agg_telegram_fix.py  test_async_base_client.py  test_async_clients.py  test_async_phases.py  test_atomic_write.py  test_backfill_commission.py  test_backfill_portfolio_return.py  test_backfill_slippage_per_ticker.py  test_base_client.py  test_batch_darkpool.py  test_bc10_scoring.py  test_bc11_circuit_breaker.py  test_bc11_robustness.py  test_bc12_features.py  test_bc13_backlog.py  test_bc14_breadth.py  test_bc15_mms.py  test_bc15_obsidian.py  test_bc16_factor_vol.py  test_bc16_phase1_async.py  test_bc18_crowdedness.py  test_bc18_ewma.py  test_bc18_mms_activation.py  test_bc18_prep.py  test_bc23_cleanup.py  test_bc9_scoring.py  test_bmi_momentum_guard.py  test_breakeven_lock.py  test_broker_sim_swing.py  test_cache.py  test_canonical_pnl_reconstruction.py  test_circuit_breaker_halt.py  test_close_positions_cancel_all.py  test_close_positions_split.py  test_close_positions_tp_fill.py  test_config.py  test_console.py  (+79 more)
(+460 files in other folders)
